# cappocacciaactivevision

./: detectsavedobject.cpp  gabriele_detectobj.cpp  objectComparison.cpp  objectComparison.h  readme.txt
CODE/: CMakeLists.txt
CODE/MOTION_TRACKER/: CMakeLists.txt
CODE/cmake/modules/: LibXML++Config.cmake
CODE/lib/: CMakeLists.txt  CSCData.cpp  CSCMatrix2D.cpp  box.h  camera.cpp  convertflt.h  cscload.h  csctype.cpp  cue.cpp  cueintegration.cpp  cueintegration.h  cueintegrationR.cpp  cuemotion.cpp  cueprediction.cpp  cuetemplate.cpp  detectobject_disp.cpp  detectobject_disp.h  displaycvimage.h  dogdetector.cpp  drawrect.cpp  envision_lib.c  gabordescriptor.h  indobjtracker.h  moveneck.cpp  moveneck.h  outputconnector.h  resize.cpp  saliency.cpp  saliency.h  saliencyL.cpp  saliencyR.cpp  sendinput.cpp  sendinput.cpp_back  sendinput.h  sift.h  torichard.h  vergence.h
CODE/src/: CMakeLists.txt  gabriele_detectobj.cpp
CODE1/: CMakeLists.txt  README
CODE1/lib/: CMakeLists.txt  CSCData.h  CSCDescriptors.cpp  CSCEllipticRegions.cpp  CSCViewData.cpp  attention.cpp  attention2.cpp_back  box.cpp  box.h_nodisp  camera.cpp  camera.h  convertflt.cpp  cropresize.cpp  cscsave.cpp  cueintegrationR.cpp  cueintegrationR.h  cuemotion.h  cueprediction.cpp  cuetemplate.h  cvimage.cpp  cvimage.h  detectobject.cpp  detectobject.cpp_backup_ultimo  detectobject.h  gabordescriptor.cpp  gaborfilter.h  harrisdetector.h  inputconnector.h  manageobjlist.cpp  saliency.cpp  saliency.h  sift.cpp
CODE1/src/: CMakeLists.txt  gabriele_detectobj.cpp  gabriele_detectobj.cpp_back  gabriele_detectobj.cpp_back2
CODE2/74iCubMain/: CMakeLists.txt
CODE2/74iCubMain/MOTION_TRACKER/: Readme.txt  main.cpp
CODE2/74iCubMain/MOTION_TRACKER/1/: main.cpp
CODE2/74iCubMain/lib/: CMakeLists.txt  CSCEllipticRegions.h  CSCGaborJet.h  attention2.cpp  camera.h  cropresize.h  cscsave.h  csctype.h  cuecontrastkernel.cpp  cuecontrastkernel.h  cueintegration.cpp  cueintegration.h  cueprediction.h  detectobject.cpp_backup  detectobject.h  detectobject.h_backup_ultimo  drawdisparity.cpp  drawdisparity.h  drawvector.h  env_params.c  module.cpp  saliency.cpp  saliency.h  saliencyL.h  saxparsertrack.h  sendinput.h_back  serializer.cpp  serializer.h  torichard.cpp  xmlobject.h
CODE2/74iCubMain/src/: CMakeLists.txt  gabriele_detectobj.cpp
CODE3/: CMakeLists.txt  README.txt
CODE3/MOTION_TRACKER/: main .cpp_back20_04_2011
CODE3/MOTION_TRACKER/2/: main.cpp_back_21_04_2010_whitout_while_working_read_a_lot
CODE3/cmake/modules/: FindIPP.cmake
CODE3/lib/: CMakeLists.txt  CSCDescriptors.h  CSCGaborJet.cpp  CSCVector.h  CSCViewData.h  attention.cpp  attention2.h  box.cpp  convert32FTo8U.cpp  convert32FTo8U.h  convertcvimagegray.cpp  cue.h  cuecolorkernel.h  cueintegration.cpp  cueintegrationR.h  cuetemplate.cpp  detectobject.cpp  detectsavedobject.cpp  detectsavedobject.h  displaycvimage.cpp  drawcross.cpp  drawcross.h  drawrect.h  drawvector.cpp  env_params.c  envision_lib.c  harrisdetector.cpp  imgfeatures.cpp  manageobjlist.h  objectComparison.cpp  resize.h  saliency.cpp  saliency.h  saliencyR.h  saxparsertrack.cpp  utils.cpp
CODE3/src/: CMakeLists.txt  gabriele_detectobj.cpp
Contract_meeting/: iCub@FIAS.ppt
Contract_meeting/1_FaceTrackerDemoNoHand/: 1_our_camera_face.xml  2_face.xml  3_faceTrackerDemoNoHand.xml  FIASFaceTrackerDemoNoHandNoCalib.xml
Contract_meeting/2_IndepMovingObjTrackerSplit/: 1_camera.xml  2_iKinGazeCtrl.xml  3_indepMotionDetector.xml  4_indepMovingObjTracker.xml
Contract_meeting/3_Cue_Integration/: .1main.cpp.swn  .1main.cpp.swo  .1main.cpp.swp  CMakeLists.txt  ImgBasics.h  Segmentation.h  Segmentation_04_11_2010.cpp  Segmentation_05_11_2010.cpp  main_working_iCub.cpp
Contract_meeting/3_Cue_Integration/build_seg_04/: CMakeCache.txt  Makefile  cmake_install.cmake  segmentation
Contract_meeting/3_Cue_Integration/build_seg_05/: CMakeCache.txt  Makefile  cmake_install.cmake  segmentation
Contract_meeting/4_GazeControl/: CMakeLists.txt  tutorial_gaze_interface.cpp
Contract_meeting/5_LookAtLocation/: CMakeLists.txt  lookAtLocationPosMovement.cpp
Contract_meeting/5_LookAtLocation/findLocation/: findLocation.cpp  findLocation_old_before_15_11.cpp
Contract_meeting/6_ColorTracking/LookAtLocationBlue/: CMakeLists.txt  lookAtLocation_blue.cpp
Contract_meeting/6_ColorTracking/findLocation/: CMakeLists.txt  findLocation_blueobject.cpp
Contract_meeting/7_ObjectTrackingSIFT/: CMakeLists.txt  findLocation.cpp
Contract_meeting/7_ObjectTrackingSIFT/build2/: CMakeCache.txt  Makefile  blue1.pgm  cmake_install.cmake  object.pgm  object_test.pgm  tmp2.txt
Contract_meeting/8_ObjectTrackingSURF/: CMakeLists.txt  SURF.cpp  SURF.h  findLocationSURF.cpp  object.pgm  object2.pgm  sift.cpp  tmp1.txt
Contract_meeting/8_ObjectTrackingSURF/build2/: findLocation  save.pgm  tmp1.txt
Contract_meeting/9_faceExpressions/.svn/: all-wcprops  entries
Contract_meeting/9_faceExpressions/conf/.svn/: all-wcprops  entries
Contract_meeting/9_faceExpressions/scripts/.svn/: all-wcprops  entries
board_serial_control/: board_quick_test_serial_lights.py  board_serial_control.py  control_from_file.py  demo.py  demo_sections.py  school_demo.py  state.txt
im-clever-paper/: bare_conf.aux  bare_conf.bbl  bare_conf.blg  bare_conf.tex  bare_conf.tex.bak  bare_conf.tex.sav  bare_confMay18(old).tex  bib.bib  bib.bib.bak  experimental_board.tex  experimental_board_main.tex  im-clever-present-notes  im-clever2011.aux  im-clever2011.bbl  im-clever2011.blg  im-clever2011.tex  ref.bib
lib/: CSCFeature.cpp  CSCFeature.h  CSCMatrix2D.h  CSCVector.cpp  attention.h  attention2.h_back  box.cpp_nodisp  convertcvimagegray.h  cscload.cpp  cuecolorkernel.cpp  detectobject.h_backup  dogdetector.h  env_params.c  envision_lib.c  envision_lib.h  gaborfilter.cpp  indobjtracker.cpp  loadcvimage.cpp  module.h  utils.h  vergence.cpp
